monolithic-objects/src/main/java/com/ttulka/blog/samples/good/product/Availability.java
package com.ttulka.blog.samples.good.product;

public enum Availability {

    IN_STOCK, SOLD_OUT, UNKNOWN
}
