monolithic-objects/src/main/java/com/ttulka/blog/samples/bad/product/Availability.java
package com.ttulka.blog.samples.bad.product;

public enum Availability {

    IN_STOCK, SOLD_OUT, UNKNOWN
}
